<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order_cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_address"
    android:layout_marginTop="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/orderId"
        android:textSize="20sp"
        android:fontFamily="@font/open_sans_bold"/>
    <TextView
        android:id="@+id/order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_id"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/orderDate"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans_semi_bold"/>
    <TextView
        android:id="@+id/order_state_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_date"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:maxWidth="250dp"
        android:textSize="16sp"
        android:text="@string/orderState"
        android:fontFamily="@font/open_sans_semi_bold"/>
    <TextView
        android:id="@+id/order_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_date"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/titleCheckOutShipment"
        android:textSize="16sp"
        android:textColor="@color/Green1"
        android:fontFamily="@font/open_sans_semi_bold"/>
    <TextView
        android:id="@+id/order_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_state_title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/orderItems"
        android:textSize="16sp"
        android:fontFamily="@font/open_sans_semi_bold"/>
    <TextView
        android:id="@+id/order_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_state"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/titleCheckOutShipment"
        android:textColor="@color/Green1"
        android:textSize="16sp"
        android:fontFamily="@font/open_sans_semi_bold"/>
    <TextView
        android:id="@+id/order_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_item_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/orderPrice"
        android:textSize="16sp"
        android:fontFamily="@font/open_sans_semi_bold"/>
    <TextView
        android:id="@+id/order_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_item"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/titleCheckOutShipment"
        android:textColor="@color/Green1"
        android:textSize="16sp"
        android:fontFamily="@font/open_sans_semi_bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>